Configure - Respond Notifications - Minor CSS Fixes (#2269)
Issue before fix
* If the window was small and the user needed to scroll, the Apply button was flush with the bottom of the screen. QE requested that we add more whitespace below the button so it isn't so tight.
* The Email Server Settings anchor/link was displayed block and extended across the page, which meant the user could accidentally activate it by clicking to the right of the anchor.

What changed
* Added more whitespace below the Apply button so that it isn't so tight
* Make the Email Server Settings link display as `inline-block` so that it doesn't extend across the page
* Also added some additional route tests for `contextual-help`.

Issue: ASOC-45815

--- a/configure/app/styles/configure/respond/_email-notifications.scss
+++ b/configure/app/styles/configure/respond/_email-notifications.scss
@@ -23,7 +23,7 @@
         max-width: 300px;
       }
       a {
-        display: block;
+        display: inline-block;
         margin-top: rsa-whitespace();
         color: text-color(secondary);
       }
@@ -93,5 +93,8 @@
         }
       }
     }
+  }
+  footer {
+    margin-bottom: rsa-whitespace(most);
   }
 }
